# cpp-win32-template

./: .clangd  .gitignore  CMakeLists.txt
build_scripts/linux/: _variables.sh
build_scripts/windows/: _variables.ps1  build_cmake.ps1  set_aliases.ps1
cmake_macros/: prac.cmake
src/: CMakeLists.txt  defines.h  win_main.cpp  win_platform.h
